src/BNF.txt
// BNF definitions
// 
// arith-factor ::= NUMBER | LPAREN arith-expr RPAREN | [ADDMINUS] arith-factor
// arith-term ::= arith-factor { MULDIV arith-factor }
// arith-expr ::= arith-term { ADDMINUS arith-term }
// 

// linq-expr ::= this-expr ( DOT linq-method-name LPAREN lambda-expr RPAREN )*
// lambda-expr ::= identifier-expr "=>" logical-or-expr

logical-or-expr ::= logical-and-expr ("||" logical-and-expr)*

logical-and-expr ::= comparison-expr ("&&" comparison-expr)*

comparison-expr ::= member-access comparison-operator value-expr
                          | value-expr comparison-operator member-access
                          | member-access
                          | "!" member-access
                          | "(" logical-or-expr ")"
                          | value-expr

// member-access ::= identifier-expr member-access-tail
// member-access-tail ::= DOT identifier-expr member-access-tail | empty-expr

// value-expr ::= NUMBER | STRING | VALUEKEYWORD
// comparison-operator ::= ">" | "<" | ">=" | "<=" | "==" | "!="
// linq-method-name ::= "Where"
// identifier-expr ::= IDENTIFIER
// this-expr ::= THIS
// empty-expr ::= ε
